# meditrack-app

./: README.md
desktop/: package-lock.json  package.json
~/VsCode/meditrack-app/: .gitignore  BUILD_FOR_IOS_WINDOWS.md  CROSS_PLATFORM_GUIDE.md  CROSS_PLATFORM_SETUP_COMPLETE.md  DEVELOPMENT_GUIDE.md  E2E_TEST_SUITE.md  FINAL_STATUS.md  MANUAL_TESTING_REPORT.md  PHASE_4_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  README.md  TESTING_COMPLETE_SUMMARY.md  VALIDATION_CHECKLIST.md  iOS_SETUP_INSTRUCTIONS.md  iOS_TESTING_GUIDE.md  iOS_TESTING_QUICK_START.md  iOS_TESTING_SUMMARY.md  iOS_TEST_REPORT_TEMPLATE.md
~/VsCode/meditrack-app/.kiro/: PHASE_1_SUMMARY.md  PHASE_2_PROGRESS.md  PHASE_3_PROGRESS.md  PHASE_4_COMPLETION.md  PHASE_4_PROGRESS.md  PHASE_5_COMPLETION.md  PHASE_5_PROGRESS.md  iOS_TESTING_STATUS.md
~/VsCode/meditrack-app/.kiro/specs/: MEDITRACK_SPEC.md  PHASE_1_FOUNDATION.md  PHASE_2_INVENTORY.md  PHASE_3_SALES.md  PHASE_4_ADMIN.md  PHASE_5_ADVANCED.md  WORKFLOW.md
~/VsCode/meditrack-app/desktop/: index.html  package-lock.json  package.json  vite.config.ts
~/VsCode/meditrack-app/desktop/src/: App.tsx  main.tsx
~/VsCode/meditrack-app/desktop/src-tauri/: Cargo.toml  tauri.conf.json
~/VsCode/meditrack-app/desktop/src-tauri/src/: main.rs
~/VsCode/meditrack-app/desktop/src/__tests__/: auth.test.ts  database.test.ts  medicine.test.ts  setup.ts  transaction.test.ts
~/VsCode/meditrack-app/desktop/src/components/: BarcodeScanner.tsx  FilterBar.tsx  MedicineForm.tsx  MedicineTable.tsx  PaymentForm.tsx  Receipt.tsx  SearchBar.tsx  ShoppingCart.tsx
(+33 files in other folders)
